--- a/1.participant_characteristics/1.participants_characteristics.ipynb
+++ b/1.participant_characteristics/1.participants_characteristics.ipynb
@@ -92,65 +92,22 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "sle_pro.describe()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "967144492a21e08f"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "sle_control.describe()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d0e7c3dfbc8c6a54"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "sle_case.describe()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "92c065db016197c"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "from scipy.stats import ttest_ind, chi2_contingency\n",
     "from statsmodels.stats.multitest import multipletests\n",
     "\n",
-    "# 存储结果\n",
     "results = []\n",
+    "t_test_columns = ['age', 'bmi'] \n",
+    "chi2_columns = ['sex', 'ethnicity', 'smoke_ever', 'alcohol_amount']  \n",
     "\n",
-    "# 变量分组\n",
-    "t_test_columns = ['age', 'bmi']  # 使用 t 检验的列\n",
-    "chi2_columns = ['sex', 'ethnicity', 'smoke_ever', 'alcohol_amount']  # 使用卡方检验的列\n",
-    "\n",
-    "# 遍历每个变量\n",
     "for column in tqdm(t_test_columns + chi2_columns, desc=\"Processing variables\"):\n",
-    "    # 分组数据\n",
     "    sle_group = sle_control[column]\n",
     "    print(\"sle_group: \", len(sle_group))\n",
     "    non_sle_group = sle_case[column]\n",
     "    print(\"non_sle_group: \", len(non_sle_group))\n",
     "\n",
-    "    # 检验方法选择\n",
     "    if column in t_test_columns:\n",
-    "        # 独立样本 t 检验\n",
     "        t_stat, p_value = ttest_ind(sle_group, non_sle_group, nan_policy='omit')\n",
     "        results.append({\n",
     "            \"variable\": column,\n",
@@ -159,7 +116,6 @@
     "            \"p_value\": p_value\n",
     "        })\n",
     "    elif column in chi2_columns:\n",
-    "        # 卡方检验\n",
     "        contingency_table = pd.crosstab(sle_pro[\"SLE\"], sle_pro[column])\n",
     "        chi2_stat, p_value, _, _ = chi2_contingency(contingency_table)\n",
     "        results.append({\n",
@@ -169,52 +125,15 @@
     "            \"p_value\": p_value\n",
     "        })\n",
     "\n",
-    "# 转换为 DataFrame\n",
     "results_df = pd.DataFrame(results)\n",
-    "\n",
-    "# 多重检验校正 (FDR)\n",
     "results_df[\"FDR_P-value\"] = multipletests(results_df[\"p_value\"], method=\"fdr_bh\")[1]\n",
-    "# 多重检验校正 (Bonferroni)\n",
-    "results_df[\"Bonferroni_P-value\"] = multipletests(results_df[\"p_value\"], method=\"bonferroni\")[1]"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ecb25de02b5e2062"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "results_df[\"Bonferroni_P-value\"] = multipletests(results_df[\"p_value\"], method=\"bonferroni\")[1]\n",
     "results_df.to_csv(\"participants_characteristics.csv\", index=False)"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "11153100fbee690"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "results_df"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "440fa37cf9df2902"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "a59701a37e4ad06e"
+   "id": "ecb25de02b5e2062"
   }
  ],
  "metadata": {
