--- a/2.cox/2.timeline_cox_check.ipynb
+++ b/2.cox/2.timeline_cox_check.ipynb
@@ -54,20 +54,17 @@
     "                 top_n=20, fdr_threshold=0.01, title='Volcano Plot',\n",
     "                 x_label='log2(Hazard Ratio)', y_label='-log10(P-value)'):\n",
     "\n",
-    "    # 计算-log10(P-value)并标记显著性\n",
     "    data['-log10(P-value)'] = -np.log10(data[p_col])\n",
     "    data['Significance'] = 'Not Significant'\n",
     "    data.loc[(data[p_col] < fdr_threshold) & (data[hr_col] > 1), 'Significance'] = 'Positive Correlation'\n",
     "    data.loc[(data[p_col] < fdr_threshold) & (data[hr_col] < 1), 'Significance'] = 'Negative Correlation'\n",
     "\n",
-    "    # 计算log2(HR)\n",
     "    data['log2(HR)'] = np.log2(data[hr_col])\n",
     "\n",
-    "    # 绘制散点图\n",
     "    plt.figure(figsize=(6,6))\n",
     "    sns.scatterplot(\n",
     "        data=data,\n",
-    "        x='log2(HR)',  # 使用log2(HR)作为X轴\n",
+    "        x='log2(HR)',  \n",
     "        y='-log10(P-value)',\n",
     "        hue='Significance',\n",
     "        palette={\n",
@@ -78,11 +75,9 @@
     "        alpha=0.7\n",
     "    )\n",
     "\n",
-    "    # 添加显著性阈值线\n",
     "    plt.axhline(-np.log10(fdr_threshold), color='gray', linestyle='--', linewidth=1, label=f'P-value = {fdr_threshold}')\n",
     "    plt.axvline(0, color='gray', linestyle='--', linewidth=1, label='log2(HR) = 0')\n",
     "\n",
-    "    # 标注正相关和负相关的显著点\n",
     "    top_positive = data[data['Significance'] == 'Positive Correlation'].nlargest(top_n, '-log10(P-value)')\n",
     "    top_negative = data[data['Significance'] == 'Negative Correlation'].nlargest(top_n, '-log10(P-value)')\n",
     "\n",
@@ -92,19 +87,15 @@
     "    for i, row in top_negative.iterrows():\n",
     "        texts.append(plt.text(row['log2(HR)'], row['-log10(P-value)'], row[feature_col], fontsize=12, color='black', ha='right'))\n",
     "\n",
-    "    # 调整文本以避免重叠\n",
     "    adjust_text(texts, arrowprops=dict(arrowstyle='-', color='gray', lw=0.5))\n",
     "\n",
-    "    # 图形美化\n",
     "    # plt.title(title, fontsize=16)\n",
     "    plt.xlabel(x_label, fontsize=14)\n",
     "    plt.ylabel(y_label, fontsize=14)\n",
     "\n",
-    "    # 图形布局调整\n",
     "    plt.grid(alpha=0.3)\n",
     "    plt.tight_layout()\n",
     "\n",
-    "    # 显示图像\n",
     "    plt.savefig(\"Volcano_plot.pdf\",format='pdf')"
    ],
    "metadata": {
