--- a/3.immune_enrichr/1.sle_figs.ipynb
+++ b/3.immune_enrichr/1.sle_figs.ipynb
@@ -36,9 +36,9 @@
    "outputs": [],
    "source": [
     "def clean_enrichr_data(df):\n",
-    "    df['Significant'] = df['Adjusted P-value'] < 0.05  # 判断显著性\n",
-    "    df = df[df['Significant']]  # 仅保留显著性结果\n",
-    "    df['Observed Proteins'] = df['Overlap'].str.split('/').str[0].astype(int)  # 提取观察到的蛋白质数量\n",
+    "    df['Significant'] = df['Adjusted P-value'] < 0.05  \n",
+    "    df = df[df['Significant']]  \n",
+    "    df['Observed Proteins'] = df['Overlap'].str.split('/').str[0].astype(int) \n",
     "    df[\"Term\"] = df[\"Term\"].apply(lambda x: re.sub(r'\\s*\\(.*?\\)', '', x))\n",
     "    df = df.sort_values('Adjusted P-value').head(10)\n",
     "    df['Term'] = pd.Categorical(df['Term'], categories=df['Term'], ordered=True)\n",
@@ -145,9 +145,7 @@
     "kegg['group'] = 'KEGG'\n",
     "reactome['group'] = 'Reactome'\n",
     "\n",
-    "# 拼接所有数据框\n",
     "combined_df = pd.concat([go_bp, go_cc, go_mf, kegg, reactome], ignore_index=True)\n",
-    "# combined_df = pd.concat([go_bp, go_cc, go_mf, reactome], ignore_index=True)\n",
     "combined_df['-log10(Adjusted P-value)'] = -np.log10(combined_df['Adjusted P-value'])\n",
     "combined_df"
    ],
@@ -215,10 +213,8 @@
     "            unique_terms.append(term)\n",
     "    return unique_terms\n",
     "\n",
-    "# 修改 combined_df 的 Term 列，避免重名\n",
     "combined_df['Unique_Term'] = resolve_duplicates(combined_df['Term'])\n",
     "\n",
-    "# 颜色映射（为每个组定义颜色）\n",
     "group_colors = {\n",
     "    'GO_BP': 'skyblue',\n",
     "    'GO_CC': 'lightgreen',\n",
@@ -227,59 +223,47 @@
     "    'Reactome': 'pink'\n",
     "}\n",
     "\n",
-    "# 获取颜色列表\n",
     "bar_colors = combined_df['group'].map(group_colors)\n",
     "\n",
-    "# 绘制柱状图\n",
-    "plt.figure(figsize=(18, 10))  # 增加图的宽高，避免拥挤\n",
+    "plt.figure(figsize=(18, 10)) \n",
     "bars = plt.bar(\n",
-    "    combined_df['Unique_Term'],  # 使用去重后的 Term\n",
+    "    combined_df['Unique_Term'],  \n",
     "    combined_df['-log10(Adjusted P-value)'],\n",
     "    color=bar_colors,\n",
     "    edgecolor='black',\n",
     "    alpha=0.7\n",
     ")\n",
     "\n",
-    "# 添加每个条的观察到蛋白质数量\n",
     "for bar, proteins in zip(bars, combined_df['Observed Proteins']):\n",
     "    bar_height = bar.get_height()\n",
     "    plt.text(\n",
     "        bar.get_x() + bar.get_width() / 2,\n",
-    "        bar_height + 0.2,  # 更高于柱条顶部，避免重叠\n",
+    "        bar_height + 0.2,  \n",
     "        str(proteins),\n",
     "        ha='center',\n",
     "        va='bottom',\n",
-    "        fontsize=12,  # 减小字体大小以避免挤占空间\n",
+    "        fontsize=12, \n",
     "    )\n",
     "\n",
-    "# 添加显著性虚线\n",
-    "# 设定阈值为 -log10(0.05) ≈ 1.3，这表示 P-value < 0.05\n",
     "significance_threshold = 1.3\n",
     "plt.axhline(y=significance_threshold, color='grey', linestyle='--', linewidth=2)\n",
     "\n",
-    "# 添加图例\n",
     "handles = [plt.Rectangle((0, 0), 1, 1, color=color) for color in group_colors.values()]\n",
     "labels = group_colors.keys()\n",
     "plt.legend(handles, labels, title='Group', loc='upper right', fontsize=12)\n",
     "\n",
-    "# 调整 X 轴标签\n",
     "plt.xticks(\n",
-    "    ticks=range(len(combined_df['Unique_Term'])),  # 保证每个Term有一个刻度\n",
+    "    ticks=range(len(combined_df['Unique_Term'])),  \n",
     "    labels=combined_df['Unique_Term'],\n",
-    "    rotation=45,  # 旋转以适应空间\n",
+    "    rotation=45,  \n",
     "    ha='right',\n",
     "    fontsize=12\n",
     ")\n",
     "\n",
-    "# 图形美化\n",
     "plt.ylabel(r'-log10($\\it{P}$ FDR)', fontsize=14)\n",
-    "# plt.xlabel('GO Term', fontsize=14)\n",
-    "# plt.title('Top Significant GO Terms by -log10(Adjusted P-value)', fontsize=16)\n",
     "\n",
-    "# 调整布局\n",
-    "plt.tight_layout()  # 自动调整布局以减少重叠\n",
+    "plt.tight_layout()  \n",
     "\n",
-    "# 保存图形\n",
     "plt.savefig(\n",
     "    '/Volumes/data_files/UKB_data/immune_result/cox2/Enrichr/SLE/enrichr.pdf',\n",
     "    format='pdf',\n",
