--- a/5.models/7.all_models_auc.ipynb
+++ b/5.models/7.all_models_auc.ipynb
@@ -669,32 +669,25 @@
     "\n",
     "def plot_multiple_roc_curves(models, model_names, pro_data, pro_labels, output_dir):\n",
     "\n",
-    "    # 提取目标变量和特征数据\n",
     "    disease = \"SLE\"\n",
     "    y = pro_labels[disease]\n",
     "    X = pro_data\n",
     "\n",
-    "    # 初始化交叉验证\n",
     "    skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
-    "    # 绘制每个模型的 ROC 曲线\n",
     "    plt.figure(figsize=(10, 8))\n",
     "    for model_path, model_name in zip(models, model_names):\n",
-    "        # 加载模型\n",
+    "\n",
     "        model = joblib.load(model_path)\n",
     "\n",
-    "        # 使用 cross_val_predict 获取预测概率\n",
     "        y_pred_proba = cross_val_predict(model, X, y, cv=skf, method='predict_proba')[:, 1]\n",
     "\n",
-    "        # 计算 AUC\n",
     "        roc_auc = roc_auc_score(y, y_pred_proba)\n",
     "        print(f\"{model_name} AUC: {roc_auc:.2f}\")\n",
     "\n",
-    "        # 绘制 ROC 曲线\n",
     "        fpr, tpr, _ = roc_curve(y, y_pred_proba)\n",
     "        plt.plot(fpr, tpr, label=f'{model_name} (AUC = {roc_auc:.2f})')\n",
     "\n",
-    "    # 绘制参考线\n",
     "    plt.plot([0, 1], [0, 1], color='grey', linestyle='--', lw=1)\n",
     "    plt.xlabel('False Positive Rate',fontsize=16)\n",
     "    plt.ylabel('True Positive Rate',fontsize=16)\n",
@@ -705,13 +698,11 @@
     "    # # 保存图像\n",
     "    # if not os.path.exists(output_dir):\n",
     "    #     os.makedirs(output_dir)\n",
-    "    # 全部的\n",
+    "\n",
     "    # output_path = os.path.join(output_dir, \"multiple_roc_curves.pdf\")\n",
-    "    # 5年内的\n",
     "    # output_path = os.path.join(output_dir, \"multiple_roc_curves_5.pdf\")\n",
-    "    # 5年外的\n",
-    "    output_path = os.path.join(output_dir, \"multiple_roc_curves_5_10.pdf\")\n",
-    "    plt.savefig(output_path, dpi=300, bbox_inches=\"tight\")\n",
+    "    # output_path = os.path.join(output_dir, \"multiple_roc_curves_5_10.pdf\")\n",
+    "    # plt.savefig(output_path, dpi=300, bbox_inches=\"tight\")\n",
     "    plt.show()\n",
     "\n",
     "    # print(f\"ROC curves saved to {output_path}\")\n",
@@ -727,9 +718,9 @@
     "    pro_labels = pro[[\"SLE\"]]\n",
     "    \n",
     "    # 5年内的\n",
-    "    # pro = pro[((pro[\"fp-SLE\"] > 0) & (pro[\"fp-SLE\"] < 5)) | (pro[\"SLE\"] == 0)]\n",
+    "    pro = pro[((pro[\"fp-SLE\"] > 0) & (pro[\"fp-SLE\"] < 5)) | (pro[\"SLE\"] == 0)]\n",
     "    # 5年外\n",
-    "    pro = pro[(pro[\"fp-SLE\"] > 5)| (pro[\"SLE\"] == 0)]\n",
+    "    # pro = pro[(pro[\"fp-SLE\"] > 5)| (pro[\"SLE\"] == 0)]\n",
     "    # 定义模型路径和名称\n",
     "    model_paths = [\n",
     "        \"/Volumes/data_files/UKB_data/immune_result/sle_models/logistic_regression/result/SLE_best_lr_model.pkl\",\n",
