--- a/5.models/8.lightgbm_for_single_protein_auc.ipynb
+++ b/5.models/8.lightgbm_for_single_protein_auc.ipynb
@@ -28,14 +28,11 @@
     "from sklearn.metrics import roc_auc_score, roc_curve\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 读取并处理数据\n",
     "pro = pd.read_csv(\"/Volumes/data_files/UKB_data/processed_data/immune_pro.csv\")\n",
     "pro = pro.fillna(pro.median(numeric_only=True))\n",
-    "# 全部数据\n",
+    "\n",
     "pro = pro[pro[\"fp-SLE\"] > 0]\n",
-    "# 5年内\n",
     "# pro = pro[((pro[\"fp-SLE\"] > 0) & (pro[\"fp-SLE\"] < 5)) | (pro[\"SLE\"] == 0)]\n",
-    "# 5年外\n",
     "# pro = pro[(pro[\"fp-SLE\"] > 5)| (pro[\"SLE\"] == 0)]"
    ]
   },
@@ -102,19 +99,14 @@
     "\n",
     "for feature in features:\n",
     "    print(f\"Using {feature} to predict {target}\")\n",
-    "\n",
-    "    # 准备数据\n",
-    "    X = pro[[feature]]  # 单一蛋白质作为特征\n",
+    "    X = pro[[feature]] \n",
     "    y = pro[target]\n",
     "\n",
-    "    # 分割数据集\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
-    "    # 创建LightGBM数据集\n",
     "    train_data = lgb.Dataset(X_train, label=y_train)\n",
     "    test_data = lgb.Dataset(X_test, label=y_test, reference=train_data)\n",
     "\n",
-    "    # 定义LightGBM参数\n",
     "    params = {\n",
     "        \"objective\": \"binary\",\n",
     "        \"boosting_type\": \"gbdt\",\n",
@@ -138,7 +130,7 @@
     "\n",
     "    plt.plot(fpr, tpr, label=f\"{feature} (AUC = {auc_score:.2f})\")\n",
     "\n",
-    "plt.plot([0, 1], [0, 1], color=\"grey\", linestyle=\"--\")  # 基准线\n",
+    "plt.plot([0, 1], [0, 1], color=\"grey\", linestyle=\"--\")  \n",
     "# plt.title(\"ROC Curves for Individual Protein Features Predicting SLE\", fontsize=14)\n",
     "plt.xlabel(\"False Positive Rate (FPR)\", fontsize=16)\n",
     "plt.ylabel(\"True Positive Rate (TPR)\", fontsize=16)\n",
@@ -146,7 +138,6 @@
     "plt.grid(alpha=0.3)\n",
     "plt.tight_layout()\n",
     "\n",
-    "# 显示图形\n",
     "# plt.savefig(\"/Volumes/data_files/UKB_data/immune_result/km_curves_auc/single_protein_auc.pdf\",dpi=300)\n",
     "# plt.savefig(\"/Volumes/data_files/UKB_data/immune_result/km_curves_auc/single_protein_auc_5.pdf\",dpi=300)\n",
     "# plt.savefig(\"/Volumes/data_files/UKB_data/immune_result/km_curves_auc/single_protein_auc_5_10.pdf\",dpi=300)\n",
@@ -214,39 +205,32 @@
     "from sklearn.metrics import roc_auc_score, roc_curve\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 读取并处理数据\n",
     "pro = pd.read_csv(\"/Volumes/data_files/UKB_data/processed_data/immune_pro.csv\")\n",
     "pro = pro.fillna(pro.median(numeric_only=True))\n",
-    "# 全部数据\n",
+    "\n",
     "pro = pro[pro[\"fp-SLE\"] > 0]\n",
-    "# 5年内\n",
+    "\n",
     "# pro = pro[((pro[\"fp-SLE\"] > 0) & (pro[\"fp-SLE\"] < 5)) | (pro[\"SLE\"] == 0)]\n",
-    "# 5年外\n",
+    "\n",
     "# pro = pro[(pro[\"fp-SLE\"] > 5)| (pro[\"SLE\"] == 0)]\n",
-    "# 提取特征和目标变量\n",
+    "\n",
     "features = ['pdcd1','lgals9','bst2','scarb2','cxcl16','il15','lag3', 'trim21','pomc','mepe','sod2']\n",
-    "covariates = ['sex', 'ethnicity']  # 协变量\n",
+    "covariates = ['sex', 'ethnicity']  \n",
     "target = 'SLE'\n",
     "\n",
-    "# 初始化绘图\n",
     "plt.figure(figsize=(10, 8))\n",
     "\n",
-    "# 遍历每个单独的蛋白质进行预测\n",
     "for feature in features:\n",
     "    print(f\"Using {feature} + covariates to predict {target}\")\n",
     "\n",
-    "    # 准备数据\n",
-    "    X = pro[[feature] + covariates]  # 将单一蛋白质特征与协变量结合\n",
+    "    X = pro[[feature] + covariates]  \n",
     "    y = pro[target]\n",
     "\n",
-    "    # 分割数据集\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
-    "    # 创建LightGBM数据集\n",
     "    train_data = lgb.Dataset(X_train, label=y_train)\n",
     "    test_data = lgb.Dataset(X_test, label=y_test, reference=train_data)\n",
     "\n",
-    "    # 定义LightGBM参数\n",
     "    params = {\n",
     "        \"objective\": \"binary\",\n",
     "        \"boosting_type\": \"gbdt\",\n",
@@ -261,21 +245,16 @@
     "        \"verbose\": -1,\n",
     "    }\n",
     "\n",
-    "    # 训练模型\n",
     "    model = lgb.train(params, train_data, valid_sets=[train_data, test_data])\n",
     "\n",
-    "    # 预测\n",
     "    y_pred_proba = model.predict(X_test, num_iteration=model.best_iteration)\n",
     "\n",
-    "    # 计算ROC曲线\n",
     "    fpr, tpr, _ = roc_curve(y_test, y_pred_proba)\n",
     "    auc_score = roc_auc_score(y_test, y_pred_proba)\n",
     "\n",
-    "    # 绘制ROC曲线\n",
     "    plt.plot(fpr, tpr, label=f\"{feature} + demographic (AUC = {auc_score:.2f})\")\n",
     "\n",
-    "# 绘制图形属性\n",
-    "plt.plot([0, 1], [0, 1], color=\"grey\", linestyle=\"--\")  # 基准线\n",
+    "plt.plot([0, 1], [0, 1], color=\"grey\", linestyle=\"--\")  \n",
     "# plt.title(\"ROC Curves for Protein Features + demographic Predicting SLE\", fontsize=14)\n",
     "plt.xlabel(\"False Positive Rate (FPR)\", fontsize=16)\n",
     "plt.ylabel(\"True Positive Rate (TPR)\", fontsize=16)\n",
@@ -283,7 +262,6 @@
     "plt.grid(alpha=0.3)\n",
     "plt.tight_layout()\n",
     "\n",
-    "# 显示图形\n",
     "# plt.savefig(\"/Volumes/data_files/UKB_data/immune_result/km_curves_auc/protein_demographic_auc_5_10.pdf\",dpi=300)\n",
     "plt.show()"
    ],
