--- a/4.protein_selection/1.sph_auc_plot.ipynb
+++ b/4.protein_selection/1.sph_auc_plot.ipynb
@@ -15,8 +15,6 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# from Utility.Training_Utilities import *\n",
-    "# from Utility.DelongTest import delong_roc_test\n",
     "from lightgbm import LGBMClassifier\n",
     "import scipy.stats as stats\n",
     "import matplotlib.pyplot as plt\n",
@@ -26,9 +24,9 @@
     "from collections import Counter\n",
     "\n",
     "def normal_imp(mydict):\n",
-    "    mysum = sum(mydict.values())  # 计算字典值的总和\n",
-    "    for key in mydict:  # 遍历字典的每个键\n",
-    "        mydict[key] = mydict[key] / mysum  # 将每个值除以总和\n",
+    "    mysum = sum(mydict.values())  \n",
+    "    for key in mydict: \n",
+    "        mydict[key] = mydict[key] / mysum \n",
     "    return mydict\n",
     "\n",
     "def get_nb_f(mydf):\n",
@@ -38,8 +36,6 @@
     "        i += 1\n",
     "    return i\n",
     "\n",
-    "\n",
-    "# 读取 JSON 文件\n",
     "file_path = \"/Volumes/data_files/UKB_data/immune_result/lgb_results_4_importance/SLE_feature_importance.json\"\n",
     "data = pd.read_json(file_path)\n",
     "totalgain = data['totalgain']\n",
@@ -48,7 +44,6 @@
     "\n",
     "mydict = dict(zip(df_totalgain_raw['Pro_code'], df_totalgain_raw['TotalGain_cv']))\n",
     "\n",
-    "# 计算 normalized 结果\n",
     "tg_imp_cv = Counter()\n",
     "tg_imp_cv += Counter(normal_imp(mydict))\n",
     "tg_imp_cv = normal_imp(tg_imp_cv)\n",
@@ -122,22 +117,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
-   "source": [
-    "nb_f = 11"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-21T09:45:08.986133Z",
-     "start_time": "2024-12-21T09:45:08.923154Z"
-    }
-   },
-   "id": "15ad77b9a2a097f8"
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "outputs": [
     {
@@ -152,9 +131,8 @@
    "source": [
     "import pickle\n",
     "import joblib\n",
-    "# 指定文件路径\n",
     "file_path = \"/Volumes/data_files/UKB_data/immune_result/lgb_results_4_importance/SLE_shap_values.pkl\"\n",
-    "# 使用 joblib 加载文件\n",
+    "nb_f = 11\n",
     "shap_values = joblib.load(file_path)\n",
     "shap_values"
    ],
@@ -198,74 +176,54 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "\n",
-    "# Select the top 40 proteins based on 'Pro_imp'\n",
     "top_40_mydf = mydf.sort_values(by=\"Pro_imp\", ascending=False).iloc[:40]\n",
     "\n",
-    "# Create the figure and axis for plotting\n",
     "fig, ax = plt.subplots(figsize=(18, 6.5))\n",
     "\n",
-    "# Define the color palette (reverse for better contrast)\n",
     "palette = sns.color_palette(\"Blues\", n_colors=len(top_40_mydf))\n",
     "palette.reverse()\n",
     "\n",
-    "# Barplot of predictor importance\n",
     "sns.barplot(ax=ax, x=\"Pro_code\", y=\"Pro_imp\", palette=palette, data=top_40_mydf)\n",
     "\n",
-    "# Set y-axis limits\n",
     "y_imp_up_lim = round(top_40_mydf['Pro_imp'].max() + 0.01, 2)\n",
     "ax.set_ylim([0, y_imp_up_lim])\n",
     "\n",
-    "# Customize tick parameters\n",
     "ax.tick_params(axis='y', labelsize=14)\n",
     "ax.set_xticklabels(top_40_mydf['Pro_code'], rotation=45, fontsize=16, horizontalalignment='right')\n",
     "\n",
-    "# Color the tick labels\n",
     "my_col = ['r'] * nb_f + ['k'] * (len(top_40_mydf) - nb_f)\n",
     "for ticklabel, tickcolor in zip(plt.gca().get_xticklabels(), my_col):\n",
     "    ticklabel.set_color(tickcolor)\n",
     "\n",
-    "# Set labels\n",
     "ax.set_ylabel('Predictor Importance', weight='bold', fontsize=18)\n",
     "ax.set_xlabel('')\n",
     "\n",
-    "# Add grid lines\n",
     "ax.grid(which='minor', alpha=0.2, linestyle=':')\n",
     "ax.grid(which='major', alpha=0.5, linestyle='--')\n",
     "ax.set_axisbelow(True)\n",
     "\n",
-    "# Create a secondary axis for cumulative AUC plot\n",
     "ax2 = ax.twinx()\n",
     "\n",
-    "# Plot AUC mean for the first 40 proteins\n",
     "ax2.plot(np.arange(nb_f + 1), top_40_mydf['AUC_mean'][:nb_f + 1], 'red', alpha=0.8, marker='o')\n",
     "ax2.plot(np.arange(nb_f + 1, len(top_40_mydf)), top_40_mydf['AUC_mean'][nb_f + 1:], 'black', alpha=0.8, marker='o')\n",
     "ax2.plot([nb_f, nb_f + 1], top_40_mydf['AUC_mean'][nb_f:nb_f + 2], 'black', alpha=0.8, marker='o')\n",
     "\n",
-    "# Fill between the AUC confidence intervals\n",
     "plt.fill_between(top_40_mydf['pro_idx'] - 1, top_40_mydf['AUC_lower'], top_40_mydf['AUC_upper'], color='tomato', alpha=0.2)\n",
     "\n",
-    "# Set AUC axis labels\n",
     "ax2.set_ylabel('Cumulative AUC', weight='bold', fontsize=18)\n",
     "ax2.tick_params(axis='y', labelsize=14)\n",
     "\n",
-    "# Set AUC axis limits\n",
     "y_auc_up_lim = round(top_40_mydf['AUC_upper'].max() + 0.02, 2)\n",
     "y_auc_low_lim = round(top_40_mydf['AUC_lower'].min() - 0.02, 2)\n",
     "ax2.set_ylim([y_auc_low_lim, y_auc_up_lim])\n",
     "\n",
-    "# Adjust layout to prevent clipping\n",
     "fig.tight_layout()\n",
     "\n",
-    "# Set x-axis limits based on the top 40 data\n",
     "plt.xlim([-.6, len(top_40_mydf) - .2])\n",
     "\n",
-    "# Display the plot\n",
     "# plt.show()\n",
     "\n",
-    "plt.savefig('SLE_Predictor_Importance.pdf', format='pdf')\n",
-    "\n",
-    "\n",
-    "\n"
+    "plt.savefig('SLE_Predictor_Importance.pdf', format='pdf')\n"
    ],
    "metadata": {
     "collapsed": false,
