loess code change

--- a/7.immune_loess_cluster/1.loess.ipynb
+++ b/7.immune_loess_cluster/1.loess.ipynb
@@ -32,13 +32,13 @@
     "sle_pro_15_cox = sle_pro_15_cox[sle_pro_15_cox['Bonferroni']<0.05]\n",
     "\n",
     "sle_pro_cox_cols = sle_pro_cox[\"Feature\"].tolist()\n",
-    "sle_pro_cox_cols = sle_pro_cox_cols + [\"SLE\", \"fp-SLE\",'sex', 'ethnicity', 'alcohol_amount']\n",
+    "sle_pro_cox_cols = sle_pro_cox_cols + [\"SLE\", \"fp-SLE\",'sex', 'ethnicity']\n",
     "sle_pro_5_cox_cols = sle_pro_5_cox[\"Feature\"].tolist()\n",
-    "sle_pro_5_cox_cols = sle_pro_5_cox_cols + [\"SLE\", \"fp-SLE\",'sex', 'ethnicity', 'alcohol_amount']\n",
+    "sle_pro_5_cox_cols = sle_pro_5_cox_cols + [\"SLE\", \"fp-SLE\",'sex', 'ethnicity']\n",
     "sle_pro_10_cox_cols = sle_pro_10_cox[\"Feature\"].tolist()\n",
-    "sle_pro_10_cox_cols = sle_pro_10_cox_cols + [\"SLE\", \"fp-SLE\",'sex', 'ethnicity', 'alcohol_amount']\n",
+    "sle_pro_10_cox_cols = sle_pro_10_cox_cols + [\"SLE\", \"fp-SLE\",'sex', 'ethnicity']\n",
     "sle_pro_15_cox_cols = sle_pro_15_cox[\"Feature\"].tolist()\n",
-    "sle_pro_15_cox_cols = sle_pro_15_cox_cols + [\"SLE\", \"fp-SLE\",'sex', 'ethnicity', 'alcohol_amount']\n"
+    "sle_pro_15_cox_cols = sle_pro_15_cox_cols + [\"SLE\", \"fp-SLE\",'sex', 'ethnicity']\n"
    ],
    "metadata": {
     "collapsed": false,
